--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,3 +1,19 @@
-<p>layout works!</p>
+<nav class="navbar">
+    <div class="navbar-left">
+        <h1>Utility Portal</h1>
+    </div>
+    <div class="navbar-right">
+        <a href="#">EDL Summary</a>
+        <a href="#">Winzone Pipeline</a>
+        <a href="#">Services Forecast Planner</a>
+        <!-- <a href="#">nav4</a> -->
+        <a href="#"><button class="btn btn-outline-success" type="button">LogOut</button></a>
+    </div>
+</nav>
+
+<style>
+    
+</style>
+<!-- <p>layout works!</p> -->
 <router-outlet></router-outlet>
 
