--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <!-- <p>login works!</p> -->
-<form (submit)="login()">
+<form (click)="login()">
     <input type="text" [(ngModel)]="username" placeholder="Username" name="username" />
     <input type="password" [(ngModel)]="password" placeholder="Password" name="password" />
     <button type="submit">Login</button>
