Implemented UI for edl-summary

--- a/src/app/layout/layout.component.css
+++ b/src/app/layout/layout.component.css
@@ -8,28 +8,29 @@
  
 }
 .navbar-left {
+    display: block;
+    /* font-size: 2em;
+    margin-block-start: 0.67em; */
+    margin-block-end: 0.67em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
     font-weight: bold;
+    unicode-bidi: isolate;
+}
+.navbar-right { 
+    margin-top: -10px;
+    padding: 5px;
 }
 .navbar-right a {
     margin-left: 15px;
     text-decoration: none;
     color: black;
     font-size: 15px;
+    margin-top: -10px;
 }
 .navbar-right a:hover {
     text-decoration: underline;
 }
 .rightNavItems{
     list-style: none;
-}
-.logout-button {
-    margin-left: 15px;
-    padding: 5px 10px;
-    background-color: #dc3545;
-    color: white;
-    border: none;
-    cursor: pointer;
-}
-.logout-button:hover {
-    background-color: #c82333;
 }
