--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -3,9 +3,9 @@
         <h1>Utility Portal</h1>
     </div>
     <div class="navbar-right">
-        <a href="#">EDL Summary</a>
-        <a href="#">Winzone Pipeline</a>
-        <a href="#">Services Forecast Planner</a>
+        <a routerLink="/edl_summary">EDL Summary</a>
+        <a routerLink="winzone_pipeline">Winzone Pipeline</a>
+        <a routerLink="service_forcast_planer">Services Forecast Planner</a>
         <!-- <a href="#">nav4</a> -->
         <a href="#"><button class="btn btn-outline-success" type="button">LogOut</button></a>
     </div>
