--- a/src/app/edl-summary/edl-summary.component.html
+++ b/src/app/edl-summary/edl-summary.component.html
@@ -11,7 +11,7 @@
           <!-- <label for="edlSelect">Select an EDL</label>
                     <br> -->
           <select class="form-control mt-5" id="edlSelect">
-            <option value="" disabled selected>Select an EDL</option>
+            <option value="" disabled selected class="text-center">Select an EDL</option>
             <option value="edl1">Abhishek_Jain</option>
             <option value="edl2">Royer_Steven</option>
             <option value="edl3">Anirban_Halder</option>
@@ -71,3 +71,4 @@
     </div>
   </div>
 </section>
+
