--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,3 +1,4 @@
+<!-- ***************************************NavBar************************************ -->
 <nav class="navbar">
     <div class="navbar-left">
         <h1>Utility Portal</h1>
@@ -10,10 +11,15 @@
         <a href="#"><button class="btn btn-outline-success" type="button">LogOut</button></a>
     </div>
 </nav>
+<!-- ********************************************************************************************** -->
 
-<style>
-    
-</style>
-<!-- <p>layout works!</p> -->
 <router-outlet></router-outlet>
 
+<!-- ************************Footer************************** -->
+
+<footer >
+  
+
+</footer>
+
+<!-- ***************************************************************** -->
