--- a/src/app/winzone-pipeline/winzone-pipeline.component.html
+++ b/src/app/winzone-pipeline/winzone-pipeline.component.html
@@ -1,1 +1,63 @@
-<p>winzone-pipeline works!</p>
+<section class="midTopContent">
+    <div class="content">
+        <br>
+        <div class="container">
+            <div class="row">
+                <div class="text-center">
+                    <h4>Winzone Pipeline</h4>
+                </div>
+            </div>
+            <div class="buttons text-center">
+                <button class="btn btn-success mx-2 my-5" type="button">Load Winzone Pipeline</button>
+                <button class="btn btn-success mx-2 my-5" type="button">Retrieve Saved Pipeline</button>
+            </div>
+    
+        </div>
+    </div>
+</section>
+
+<section class="midMiddleContent">
+    <div class="container">
+        <div class="row text-center">
+            <p><b>Parent Customer : </b> Security Health Plan of Wisconsin, Inc.</p>
+        </div>
+        <table class="table table-hover table-bordered">
+            <thead>
+                <tr>
+                    <th scope="col" class="px-3">Parent Oppurtunity Name</th>
+                    <th scope="col" class="px-3">Forecast Category</th>
+                    <th scope="col" class="px-3">Deal Type</th>
+                    <th scope="col" class="px-3">Win Probability</th>
+                    <th scope="col" class="px-3">HPC TCV $</th>
+                    <th scope="col" class="px-3">Deal Duration</th>
+                    <th scope="col" class="px-3">Sales Stage</th>
+                    <th scope="col" class="px-3">Winzone ID</th>
+                    <th scope="col" class="px-3">Persuit Leader</th>
+                    <th scope="col" class="px-3">Finincial Year</th>
+                    <th scope="col" class="px-3">Comments</th>
+                    <th scope="col" class="px-3">Updated Forecast Category</th>
+                    <!-- <th scope="col"></th>
+                    <th scope="col"></th> -->
+                </tr>
+            </thead>
+            <tbody>
+                <td class="px-3">Prakash</td>
+                <td class="px-3">DotNet</td>
+                <td class="px-3">Software</td>
+                <td class="px-3">0</td>
+                <td class="px-3">420</td>
+                <td class="px-3">9211</td>
+                <td class="px-3">3rd</td>
+                <td class="px-3">9714</td>
+                <td class="px-3">Anirban</td>
+                <td class="px-3">2025</td>
+                <td class="px-3">No Comments</td>
+                <td class="px-3">NA-NA</td>
+            </tbody>
+        </table>
+        
+    </div>
+    <div class="text-center my-2">
+        <button class="btn btn-success">Save Pipiline Data</button>
+    </div>
+</section>
