--- a/src/app/winzone-pipeline/winzone-pipeline.component.html
+++ b/src/app/winzone-pipeline/winzone-pipeline.component.html
@@ -21,21 +21,21 @@
         <div class="row text-center">
             <p><b>Parent Customer : </b> Security Health Plan of Wisconsin, Inc.</p>
         </div>
-        <table class="table table-hover table-bordered">
+        <table class="table table-bordered table-hover">
             <thead>
                 <tr>
-                    <th scope="col" class="px-3">Parent Oppurtunity Name</th>
-                    <th scope="col" class="px-3">Forecast Category</th>
-                    <th scope="col" class="px-3">Deal Type</th>
-                    <th scope="col" class="px-3">Win Probability</th>
-                    <th scope="col" class="px-3">HPC TCV $</th>
-                    <th scope="col" class="px-3">Deal Duration</th>
-                    <th scope="col" class="px-3">Sales Stage</th>
-                    <th scope="col" class="px-3">Winzone ID</th>
-                    <th scope="col" class="px-3">Persuit Leader</th>
-                    <th scope="col" class="px-3">Finincial Year</th>
-                    <th scope="col" class="px-3">Comments</th>
-                    <th scope="col" class="px-3">Updated Forecast Category</th>
+                    <th scope="col" >Parent Oppurtunity Name</th>
+                    <th scope="col" >Forecast Category</th>
+                    <th scope="col" >Deal Type</th>
+                    <th scope="col" >Win Probability</th>
+                    <th scope="col" >HPC TCV $</th>
+                    <th scope="col" >Deal Duration</th>
+                    <th scope="col" >Sales Stage</th>
+                    <th scope="col" >Winzone ID</th>
+                    <th scope="col" >Persuit Leader</th>
+                    <th scope="col" >Finincial Year</th>
+                    <th scope="col" >Comments</th>
+                    <th scope="col" >Updated Forecast Category</th>
                     <!-- <th scope="col"></th>
                     <th scope="col"></th> -->
                 </tr>
