--- a/src/app/service-forcast-planer/service-forcast-planer.component.html
+++ b/src/app/service-forcast-planer/service-forcast-planer.component.html
@@ -1,1 +1,145 @@
-<p>service-forcast-planer works!</p>
+<section class="topcontent">
+  <div class="container">
+    <div class="row">
+      <div class="text-center my-3">
+        <h4>Service Forcast Planer</h4>
+      </div>
+      <div class="container">
+        <div class="containerLeft my-3">
+          <select name="dropdown" id="simpleSelect" class="form-control">
+            <option value="" disabled selected>Choose Parent Customer</option>
+            <option value="1">Customer 1</option>
+            <option value="2">Customer 2</option>
+            <option value="3">Customer 3</option>
+          </select>
+        </div>
+        <div class="containerRight">
+          <table class="table table-striped table-bordered table-hover">
+            <tbody>
+              <tr>
+                <th scope="row">Toolkit rev</th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+              </tr>
+              <tr>
+                <th scope="row">Backlog</th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+              </tr>
+              <tr>
+                <th scope="row">Most Likely</th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+              </tr>
+              <tr>
+                <th scope="row">Update</th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+              </tr>
+              <tr>
+                <th scope="row">Total</th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+              </tr>
+              <tr>
+                <th scope="row">Onsite FTE</th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+              </tr>
+              <tr>
+                <th scope="row">Offshore FTE</th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+              </tr>
+              <tr>
+                <th scope="row">Total</th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="midcontent">
+  <div class="text-center">
+    <button class="btn btn-success my-3">Load BL Fcast</button>
+    <button class="btn btn-success mx-3">Save BL Fcast</button>
+    <button class="btn btn-success">Ritrieve BL Fcast</button>
+    <button class="btn btn-info mx-3">Go To Winzone Section</button>
+  </div>
+</section>
+<section class="bottomcontent">
+  <div class="container my-3">
+    <table class="table table-hover table-bordered">
+      <thead>
+        <tr>
+          <th scope="col">ProjectId</th>
+          <th scope="col">Project Description</th>
+          <th scope="col">Finincial Year</th>
+          <th scope="col">Comments</th>
+          <th scope="col">Project Billability</th>
+          <th scope="col">Project End</th>
+          <th scope="col">Billed FTE</th>
+          <th scope="col">Project Manager</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">100001</th>
+          <td>Lorem ipsum, dolor sit amet consectetur adipisicing.</td>
+          <td>2024</td>
+          <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa, dolorem.</td>
+          <td>Non-Billable</td>
+          <td>2027</td>
+          <td>No</td>
+          <td>Not Assigned</td>
+        </tr>
+        
+        
+      </tbody>
+    </table>
+  </div>
+</section>
