--- a/src/app/winzone-pipeline/winzone-pipeline.component.html
+++ b/src/app/winzone-pipeline/winzone-pipeline.component.html
@@ -1,63 +1,63 @@
 <section class="midTopContent">
-    <div class="content">
-        <br>
-        <div class="container">
-            <div class="row">
-                <div class="text-center">
-                    <h4>Winzone Pipeline</h4>
-                </div>
-            </div>
-            <div class="buttons text-center">
-                <button class="btn btn-success mx-2 my-5" type="button">Load Winzone Pipeline</button>
-                <button class="btn btn-success mx-2 my-5" type="button">Retrieve Saved Pipeline</button>
-            </div>
-    
+  <div class="content">
+    <br />
+    <div class="container">
+      <div class="row">
+        <div class="text-center">
+          <h4>Winzone Pipeline</h4>
         </div>
+      </div>
+      <div class="buttons text-center">
+        <button class="btn btn-success mx-2 my-5" type="button">
+          Load Winzone Pipeline
+        </button>
+        <button class="btn btn-success mx-2 my-5" type="button">
+          Retrieve Saved Pipeline
+        </button>
+      </div>
     </div>
+  </div>
 </section>
 
 <section class="midMiddleContent">
-    <div class="container">
-        <div class="row text-center">
-            <p><b>Parent Customer : </b> Security Health Plan of Wisconsin, Inc.</p>
-        </div>
-        <table class="table table-bordered table-hover">
-            <thead>
-                <tr>
-                    <th scope="col" >Parent Oppurtunity Name</th>
-                    <th scope="col" >Forecast Category</th>
-                    <th scope="col" >Deal Type</th>
-                    <th scope="col" >Win Probability</th>
-                    <th scope="col" >HPC TCV $</th>
-                    <th scope="col" >Deal Duration</th>
-                    <th scope="col" >Sales Stage</th>
-                    <th scope="col" >Winzone ID</th>
-                    <th scope="col" >Persuit Leader</th>
-                    <th scope="col" >Finincial Year</th>
-                    <th scope="col" >Comments</th>
-                    <th scope="col" >Updated Forecast Category</th>
-                    <!-- <th scope="col"></th>
-                    <th scope="col"></th> -->
-                </tr>
-            </thead>
-            <tbody>
-                <td class="px-3">Prakash</td>
-                <td class="px-3">DotNet</td>
-                <td class="px-3">Software</td>
-                <td class="px-3">0</td>
-                <td class="px-3">420</td>
-                <td class="px-3">9211</td>
-                <td class="px-3">3rd</td>
-                <td class="px-3">9714</td>
-                <td class="px-3">Anirban</td>
-                <td class="px-3">2025</td>
-                <td class="px-3">No Comments</td>
-                <td class="px-3">NA-NA</td>
-            </tbody>
-        </table>
-        
+  <div class="container">
+    <div class="row text-center">
+      <p><b>Parent Customer : </b> Security Health Plan of Wisconsin, Inc.</p>
     </div>
-    <div class="text-center my-2">
-        <button class="btn btn-success">Save Pipiline Data</button>
-    </div>
+    <table class="table table-bordered table-hover">
+      <thead>
+        <tr>
+          <th scope="col">Parent Oppurtunity Name</th>
+          <th scope="col">Forecast Category</th>
+          <th scope="col">Deal Type</th>
+          <th scope="col">Win Probability</th>
+          <th scope="col">HPC TCV $</th>
+          <th scope="col">Deal Duration</th>
+          <th scope="col">Sales Stage</th>
+          <th scope="col">Winzone ID</th>
+          <th scope="col">Persuit Leader</th>
+          <th scope="col">Finincial Year</th>
+          <th scope="col">Comments</th>
+          <th scope="col">Updated Forecast Category</th>
+        </tr>
+      </thead>
+      <tbody>
+        <td>Prakash</td>
+        <td>DotNet</td>
+        <td>Software</td>
+        <td>0</td>
+        <td>420</td>
+        <td>9211</td>
+        <td>3rd</td>
+        <td>9714</td>
+        <td>Anirban</td>
+        <td>2025</td>
+        <td>No Comments</td>
+        <td>NA-NA</td>
+      </tbody>
+    </table>
+  </div>
+  <div class="text-center my-2">
+    <button class="btn btn-success">Save Pipiline Data</button>
+  </div>
 </section>
