--- a/src/app/edl-summary/edl-summary.component.html
+++ b/src/app/edl-summary/edl-summary.component.html
@@ -1,17 +1,18 @@
 <section class="content">
   <br />
   <div class="text-center">
-
     <!-- Div Container for Seraching Details -->
 
     <div class="searchDetails">
       <div class="container">
-        <h3 class="mt-5">EDL Summary</h3>
+        <h3 class="my-3">EDL Summary</h3>
         <div class="form-group">
           <!-- <label for="edlSelect">Select an EDL</label>
                     <br> -->
-          <select class="form-control mt-5" id="edlSelect">
-            <option value="" disabled selected class="text-center">Select an EDL</option>
+          <select class="form-control my-3" id="edlSelect">
+            <option value="" disabled selected class="text-center">
+              Select an EDL
+            </option>
             <option value="edl1">Abhishek_Jain</option>
             <option value="edl2">Royer_Steven</option>
             <option value="edl3">Anirban_Halder</option>
@@ -26,29 +27,26 @@
 
     <!-- Div Container for Fetching Details -->
 
-    <div class="viewDetails ">
-        
+    <div class="viewDetails">
       <div class="container">
-        <p class="text-center mt-3">Total M-O-M Portfolio</p>
-        <table class="table table-hover">
+        <p class="text-center">Total M-O-M Portfolio</p>
+        <table class="table table-hover table-bordered">
           <thead>
             <tr>
               <th scope="col">Parent Customer</th>
               <th scope="col">Finincial Year</th>
               <th scope="col">Jan</th>
               <th scope="col">Feb</th>
-                <th scope="col">Mar</th>
-                <th scope="col">Apr</th>
-                <th scope="col">May</th>
-                <th scope="col">Jun</th>
-                <th scope="col">Jul</th>
-                <th scope="col">Aug</th>
-                <th scope="col">Sep</th>
-                <th scope="col">Oct</th>
-                <th scope="col">Nov</th>
-                <th scope="col">Dec</th>
-
-
+              <th scope="col">Mar</th>
+              <th scope="col">Apr</th>
+              <th scope="col">May</th>
+              <th scope="col">Jun</th>
+              <th scope="col">Jul</th>
+              <th scope="col">Aug</th>
+              <th scope="col">Sep</th>
+              <th scope="col">Oct</th>
+              <th scope="col">Nov</th>
+              <th scope="col">Dec</th>
             </tr>
           </thead>
           <tbody>
@@ -57,18 +55,36 @@
               <td>2023</td>
               <td></td>
               <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
             </tr>
             <tr>
               <td scope="row">Tennessee Rrural Health</td>
               <td>2024</td>
               <td></td>
               <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
             </tr>
-          
           </tbody>
         </table>
       </div>
     </div>
   </div>
 </section>
-
